log
Thu 09 Mar 2023 03:48:45 PM UTC: 
 tests:  0|7
total_score: 0/70
649ecd3
Thu 09 Mar 2023 04:14:37 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|7
total_score: 0/70
fa01b10
Thu 16 Mar 2023 03:32:20 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:8: error: ‘temporal’ undeclared (first use in this function)
   18 |   *b = temporal;
      |        ^~~~~~~~
exercises.c:18:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:19:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   19 |   return *b
      |          ^~
exercises.c:15:6: note: declared here
   15 | void swap(int *a, int *b) {
      |      ^~~~
exercises.c:19:12: error: expected ‘;’ before ‘}’ token
   19 |   return *b
      |            ^
      |            ;
   20 | }
      | ~           
exercises.c:16:7: error: unused variable ‘auxiliar’ [-Werror=unused-variable]
   16 |   int auxiliar = *a;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f41a1c3
Thu 16 Mar 2023 03:32:35 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:8: error: ‘temporal’ undeclared (first use in this function)
   18 |   *b = temporal;
      |        ^~~~~~~~
exercises.c:18:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:16:7: error: unused variable ‘auxiliar’ [-Werror=unused-variable]
   16 |   int auxiliar = *a;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d19a19c
Thu 16 Mar 2023 03:32:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2f366c9
Thu 16 Mar 2023 03:52:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:13: error: expected identifier before ‘*’ token
   29 |     if (*a->*min > *a ->*min + 1){
      |             ^
exercises.c:30:18: error: expected ‘;’ before ‘}’ token
   30 |       *max = *min
      |                  ^
      |                  ;
   31 |     }
      |     ~             
exercises.c:33:18: error: expected ‘;’ before ‘}’ token
   33 |       *min = *max
      |                  ^
      |                  ;
   34 |     }
      |     ~             
Compilation failed
fe1ca87
Thu 16 Mar 2023 03:52:54 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:13: error: expected identifier before ‘*’ token
   29 |     if (*a->*min > *a ->*min + 1){
      |             ^
exercises.c:30:18: error: expected ‘;’ before ‘}’ token
   30 |       *max = *min
      |                  ^
      |                  ;
   31 |     }
      |     ~             
exercises.c: At top level:
exercises.c:37:1: error: expected identifier or ‘(’ before ‘}’ token
   37 | }
      | ^
Compilation failed
1c82a94
Thu 16 Mar 2023 03:53:12 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:13: error: expected identifier before ‘*’ token
   29 |     if (*a->*min > *a ->*min + 1){
      |             ^
exercises.c: At top level:
exercises.c:40:1: error: expected identifier or ‘(’ before ‘}’ token
   40 | }
      | ^
Compilation failed
88eb416
Thu 16 Mar 2023 03:53:21 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:13: error: expected identifier before ‘*’ token
   29 |     if (*a->*min > *a ->*min + 1){
      |             ^
Compilation failed
6cb8a4a
